# object_store_rust

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  design_doc.md  learning_note.md
src/: lib.rs  main.rs
src/common/: mod.rs  storage_type.rs  store_type.rs
src/http/: app_state.rs  mod.rs  object.rs  object_handler.rs  root_handler.rs
src/store/: app_error.rs  blob.rs  metadata.rs  mod.rs  object_store.rs  segment_store.rs  standalone_store.rs
test/: test.txt
