[package]
name = "object_store_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
axum = "0.7"
tokio = {version="1", features=["full"]}
natord = "1.0"

[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
