[package]
name = "object_store_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
axum = "0.8"
tokio = {version="1", features=["full"]}
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
natord = "1.0"
sled = "0.34.7"
serde = {version = "1.0", features = ["derive"]}
bincode = {version = "1.3"}
segment_rust = {git="https://github.com/hotlatteiceamericano/segment_rust"}

[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
rstest = "0.26.1"
axum-test = "18.7.0"
